# Prog3

./: CMakeLists.txt
2022CDx-u01-recursividad-pauliiortizz/: CMakeLists.txt  README.md
2022CDx-u01-recursividad-pauliiortizz/Ej-01/: main.cpp  potencia.cpp  potencia.h
2022CDx-u01-recursividad-pauliiortizz/Ej-02/: main.cpp  sumatoria.cpp  sumatoria.h
2022CDx-u01-recursividad-pauliiortizz/Ej-03/: ackerman.cpp  ackerman.h  main.cpp
2022CDx-u01-recursividad-pauliiortizz/Ej-04/: main.cpp  mcd.cpp  mcd.h
2022CDx-u01-recursividad-pauliiortizz/Ej-05/: digitos.cpp  digitos.h  main.cpp
2022CDx-u01-recursividad-pauliiortizz/Ej-06/: main.cpp
2022CDx-u01-recursividad-pauliiortizz/Ej-07/: main.cpp
2022CDx-u01-recursividad-pauliiortizz/Ej-08/: main.cpp
2022CDx-u01-recursividad-pauliiortizz/Extra-Laberinto/: LaberintoSolver.cpp  LaberintoSolver.h  LaberintoSolver.old  MazeGenerator.cpp  MazeGenerator.h  main.cpp
Ej -  (1) Ordenar Menor a mayor/: Ej.1.cpp
Ej -  (3) Suma enteros PARES/: Ej-3.cpp
Ej -  (5) mayor y menor/: CMakeLists.txt
Ej - (13) Cola Par - Pila Impar/: Pila.h  main2.cpp
Ej - (15)/: main2.cpp
Ej - (16)/: Cola.h  Lista.h  Pila.h  main2.cpp
Parcial/: CMakeLists.txt  Pila.h  main2.cpp
listas-pauliiortizz/: CMakeLists.txt  README.md
listas-pauliiortizz/Ej-01/: Lista.h  (+3 more)
primer-parcial-comision-a2-pauliiortizz/: CMakeLists.txt  Ej1.cpp  Ej2.cpp  Ej3.cpp  README.md
u03-pilas-pauliiortizz/: CMakeLists.txt  README.md
u03-pilas-pauliiortizz/Ej-01/: main.cpp
u03-pilas-pauliiortizz/Ej-02/: Pila.h  main.cpp
u03-pilas-pauliiortizz/Ej-03/: main.cpp
u03-pilas-pauliiortizz/Ej-04/: main.cpp
u03-pilas-pauliiortizz/Ej-05/: main.cpp
u03-pilas-pauliiortizz/Ej-06/: main.cpp
u03-pilas-pauliiortizz/Ej-07/: main.cpp
u03-pilas-pauliiortizz/Ej-08/: main.cpp
u03-pilas-pauliiortizz/Pila/: Nodo.h  Pila.h  README.md
u04-colas-pauliiortizz/: CMakeLists.txt  README.md
u04-colas-pauliiortizz/Cola/: Cola.h  Nodo.h  Pila.h  README.md
u04-colas-pauliiortizz/Ej-01/: main.cpp
u04-colas-pauliiortizz/Ej-02/: main.cpp
u04-colas-pauliiortizz/Ej-03/: main.cpp
u04-colas-pauliiortizz/Ej-04/: main.cpp
u04-colas-pauliiortizz/Ej-05/: main.cpp
u04-colas-pauliiortizz/Ej-06/: main.cpp
u04-colas-pauliiortizz/Ej-07/: main.cpp
u04-colas-pauliiortizz/Ej-08/: main.cpp
u05-arboles-pauliiortizz/: CMakeLists.txt  README.md
u06-tablas-hash-pauliiortizz/: CMakeLists.txt  README.md
(+42 files in other folders)
