add_executable(U03-E01 Ej-01/main.cpp Pila/Pila.h Pila/Nodo.h
        Ej-06/main.cpp
        Ej-07/main.cpp
        Ej-08/main.cpp)

add_executable(U03-E02 Ej-02/main.cpp Ej-02/Pila.h)

add_executable(U03-E03 Ej-03/main.cpp)

add_executable(U03-E04 Ej-04/main.cpp)

add_executable(U03-E05 Ej-05/main.cpp)

add_executable(U03-E06 Ej-06/main.cpp)
add_executable(U03-E07 Ej-07/main.cpp)
add_executable(U03-E08 Ej-08/main.cpp)