add_executable(U04-E01 Ej-01/main.cpp Cola/Cola.h Cola/Nodo.h
        Ej-06/main.cpp)

add_executable(U04-E02 Ej-02/main.cpp Cola/Pila.h)

add_executable(U04-E03 Ej-03/main.cpp)

add_executable(U04-E04  Ej-04/main.cpp)

add_executable(U04-E05 Ej-05/main.cpp)
add_executable(U04-E06 Ej-06/main.cpp)
add_executable(U04-E07 Ej-07/main.cpp)
add_executable(U04-E08 Ej-08/main.cpp)
